# project-tetris

./: CLAUDE.md  README.md
.github/workflows/: deploy.yml
doc/adr/: adr001_spa_framework.md  adr002_state_management.md  adr003_directory_structure.md  adr004_ui_framework.md  adr005_test_strategy.md  adr006_routing.md  adr007_api_data_strategy.md  adr008_authentication_strategy.md  adr009_database_strategy.md  adr010_online_battle_login_required.md  adr011_sns_login_integration.md  adr012_minimal_profile_implementation.md  adr013_score_history_limitation.md  adr014_operation_log_omission.md  adr015_game_mode_separation.md  (+8 more)
doc/architecture/: phase3.md  (+6 more)
log/: 20241225_1400_react_migration_complete.md  20241225_phase4_api_routes_implementation.md  20250625_1425_fever_effects_polish.md  20250625_1943_nextjs_foundation_setup.md  20250625_1959_検証まとめ.md  20250625_2006_react_components_implementation.md  20250625_2006_react_components_verification.md  20250625_2012_hydration_error_fix.md  20250625_2029_tetromino_system_implementation.md  20250625_2133_collision_detection_system_implementation.md  20250625_2200_auto_drop_timer_implementation.md  20250625_2230_comprehensive_implementation_plan.md  20250625_2235_claude_tetris_core_systems_complete.md  20250625_2315_point_exchange_system_implementation.md  20250625_2330_srs_spin_system_complete.md  20250626_ソフトドロップスコアリング修正.md  20250626_自動落下開始問題の修正.md
rust-backend/: .env  Cargo.toml
rust-backend/src/: main.rs
rust-backend/src/api/: achievements.rs  auth.rs  mod.rs  scores.rs  users.rs
rust-backend/src/config/: app_config.rs  mod.rs
rust-backend/src/db/: connection.rs  mod.rs
rust-backend/src/models/: achievement.rs  mod.rs  score.rs  user.rs
rust-backend/src/services/: auth_service.rs  game_service.rs  mod.rs
rust-game-engine/: .gitignore  Cargo.toml  README.md  build.sh
rust-game-engine/src/: lib.rs
rust-game-engine/src/achievement/: manager.rs  mod.rs  types.rs
rust-game-engine/src/game/: engine.rs  mod.rs
rust-game-engine/src/utils/: math.rs  mod.rs
(+19 files in other folders)
