[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2.1"

# Authentication
jsonwebtoken = "9.2"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP
tower-http = { version = "0.5", features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP Client (for Clerk integration)
reqwest = { version = "0.11", features = ["json"] }

# Connection pooling
r2d2 = "0.8"
